--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Lezioni</h5>
                     <p class="card-text">Qui sono contenuti tutti gli applicativi per gestire le lezioni.</p>
-                    <a asp-area="" asp-controller="Lezioni" asp-action="Add" class="btn btn-primary mt-auto">Vai</a>
+                    <a asp-area="" asp-controller="Lezioni" asp-action="List" class="btn btn-primary mt-auto">Vai</a>
                 </div>
             </div>
         </div>
