--- a/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
@@ -8,7 +8,7 @@
 
 <div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
-			<h1 class="mb-4">Corsi di Laurea per Tipo e Facoltà</h1>
+			<h1 class="mb-4">Corsi di Laurea</h1>
 		<div class="col-md-8">
 			<p>
 				La nostra università online propone una vasta gamma di corsi di laurea, pensati per rispondere alle esigenze di formazione nei più diversi ambiti disciplinari.
