--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -1,181 +1,168 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AreaStudente</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/AreaStudente.styles.css" asp-append-version="true" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"] - AreaStudente</title>
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/AreaStudente.styles.css" asp-append-version="true" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
 
 
-    <style>
-        .navbar-custom {
-            background-color: #12304F;
-        }
+	<style>
+		.navbar-custom {
+			background-color: #12304F;
+		}
 
-            .navbar-custom .nav-link,
-            .navbar-custom .navbar-brand {
-                color: white !important;
-            }
+			.navbar-custom .nav-link,
+			.navbar-custom .navbar-brand {
+				color: white !important;
+			}
 
-        .dropdown-menu > li:hover > .dropdown-submenu {
-            display: block;
-        }
-
-
-        .sticky-top {
-            z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
-        }
+		.dropdown-menu > li:hover > .dropdown-submenu {
+			display: block;
+		}
 
 
+		.sticky-top {
+			z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
+		}
 
-        .navbar-nav .nav-item.logout {
-            position: absolute;
-            right: 0; /* Posiziona il link a destra */
-        }
 
-        body {
-            background-color: #f8f9fe;
-        }
 
-        footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            right: 0;
-            left: 0;
-            bottom: 0;
-        }
-    </style>
+		.navbar-nav .nav-item.logout {
+			position: absolute;
+			right: 0; /* Posiziona il link a destra */
+		}
+
+		body {
+			background-color: #f8f9fe;
+		}
+
+		html, body {
+			height: 100%;
+			margin: 0;
+		}
+
+
+	</style>
 
 </head>
+<body class="d-flex flex-column min-vh-100">
+	<div class="bg-white p-0 " style="height:6rem;">
+		<div class="d-flex flex-row">
+			<div class="w-50 d-flex align-items-center">
+				<a href="/Studenti/Show?cod=@ViewData["studente_id"]"><img src="~/css/resources/logoblu.png" style="height: 6rem; padding-bottom:10px;" /></a>
+			</div>
+			<div class="d-flex justify-content-end flex-column w-50 mb-2 mt-1">
+				<div class="d-flex justify-content-end  mb-2 mt-1">
+					<!-- Pulsanti in alto a destra -->
+					<div class="d-flex gap-2 me-3">
+						@if (@ViewData["matricola"] != null)
+						{
 
-<body class="m-0 flex-wrapper">
-    <div class="bg-white p-0 " style="height:6rem;">
-        <div class="d-flex flex-row">
-            <div class="w-50 d-flex align-items-center">
-                <a href="/Studenti/Show?cod=@ViewData["studente_id"]"><img src="~/css/resources/logoblu.png" style="height: 6rem; padding-bottom:10px;" /></a>
-            </div>
-            <div class="d-flex justify-content-end flex-column w-50 mb-2 mt-1">
-                <div class="d-flex justify-content-end  mb-2 mt-1">
-                    <!-- Pulsanti in alto a destra -->
-                    <div class="d-flex gap-2 me-3">
-                        @if (@ViewData["matricola"] != null)
-                        {
+							<a target="_blank" class="btn btn-sm text-white" style="background-color: #12304F;" href="@($"http://localhost:54399/Homepage.aspx?cod={ViewData["studente_id"]}&usr={ViewData["email"]}&mat={ViewData["matricola"]}&a={ViewData["abilitato"]}&r={ViewData["ruolo"]}")">Area Lavoro</a>
+						}
+						else
+						{
+							<a target="_blank" class="btn btn-sm text-white disabled" tabindex="-1" aria-disabled="true" style="background-color: #12304F;" href="@($"http://localhost:54399/Homepage.aspx?cod={ViewData["studente_id"]}&usr={ViewData["email"]}&mat={ViewData["matricola"]}&a={ViewData["abilitato"]}")">Area Lavoro</a>
+						}
+					</div>
+					<div class="d-flex gap-2 me-3">
+						<a class="btn  btn-sm " style="color: #12304F; border-color:#12304F;" aria-current="page" href="https://localhost:7272/Home/Index">Logout</a>
+					</div>
+				</div>
+				<p class="fs-4 text-black me-3 text-end fst-italic">"Fatti non foste a viver come bruti"</p>
 
-                            <a target="_blank" class="btn btn-sm text-white" style="background-color: #12304F;" href="@($"http://localhost:54399/Homepage.aspx?cod={ViewData["studente_id"]}&usr={ViewData["email"]}&mat={ViewData["matricola"]}&a={ViewData["abilitato"]}&r={ViewData["ruolo"]}")">Area Lavoro</a>
-                        }
-                        else
-                        {
-                            <a target="_blank" class="btn btn-sm text-white disabled" tabindex="-1" aria-disabled="true" style="background-color: #12304F;" href="@($"http://localhost:54399/Homepage.aspx?cod={ViewData["studente_id"]}&usr={ViewData["email"]}&mat={ViewData["matricola"]}&a={ViewData["abilitato"]}")">Area Lavoro</a>
-                        }
-                    </div>
-                    <div class="d-flex gap-2 me-3">
-                        <a class="btn  btn-sm " style="color: #12304F; border-color:#12304F;" aria-current="page" href="https://localhost:7272/Home/Index">Logout</a>
-                    </div>
-                </div>
-                <p class="fs-4 text-black me-3 text-end fst-italic">"Fatti non foste a viver come bruti"</p>
+			</div>
+		</div>
+	</div>
 
-            </div>
-        </div>
-    </div>
+	<header>
+		<div class="sticky-top">
+			<nav class="navbar navbar-expand-lg navbar-custom">
+				<div class="mx-3">
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="/Studenti/Show?cod=@ViewData["studente_id"]">Il mio Profilo</a>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+									Gestione Profilo
+								</a>
+								<ul class="dropdown-menu">
+									<li class="dropdown">
+										<a class="dropdown-item" style="color:inherit" ; href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]">
+											Modifica Dati
+										</a>
+									</li>
+								</ul>
+							</li>
 
-    <header>
-        <div class="sticky-top">
-            <nav class="navbar navbar-expand-lg navbar-custom">
-                <div class="mx-3">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/Studenti/Show?cod=@ViewData["studente_id"]">Il mio Profilo</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Gestione Profilo
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown">
-                                        <a class="dropdown-item" style="color:inherit" ; href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]">
-                                            Modifica Dati
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Immatricolazione
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" style="color:inherit; " href="/Studenti/Immatricolati?cod=@ViewData["studente_id"]">Immatricolazione</a></li>          @*  
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+									Immatricolazione
+								</a>
+								<ul class="dropdown-menu">
+									<li><a class="dropdown-item" style="color:inherit; " href="/Studenti/Immatricolati?cod=@ViewData["studente_id"]">Immatricolazione</a></li>          @*  
                                     <li><a class="dropdown-item" style="color:inherit; " href="/Immatricolazione/Add?cod=@ViewData["studente_id"]">Invio documenti</a></li>
                                 *@
-                                </ul>
-                            </li>
+								</ul>
+							</li>
 
-                            @*         <li class="nav-item">
+							@*         <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/Comunicazioni/Add">Nuova Comunicazione</a>
 
                             </li> *@
 
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/Faq/Faq">FAQ</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </header>
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="/Faq/Faq">FAQ</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</div>
+	</header>
 
-    @* <div class="container"> *@
-    <main role="main" class="pb-3">
-        @RenderBody()
-    </main>
-    @* </div> *@
-    <div class="mt-3 mb-3" style="height: 15vh;"></div>
-        <footer class="bg-dark text-white mt-auto">
-            <div class="bg-dark text-white mt-auto">
-                <div class="container d-flex justify-content-between align-items-end flex-wrap">
-                    <div>
-                        <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
-                        <p class="fs-4">Università UNIGen</p>
-                        <p class="fs-6">Milano, MI 20100, IT</p>
-                    </div>
-                    <div>
-                        <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
-                    </div>
-                    <div>
-                        <p class="fs-5 mb-1">Chi Siamo</p>
-                        <ul class="list-unstyled ms-3">
-                            <li>
-                                <a class="text-white" asp-area="" asp-controller="Home" asp-action="Contatti">Contatti</a>
-                            </li>
-                            <li>
-                            <a class="text-white" asp-area="" asp-controller="Home" asp-action="Come_Funziona">Come Funziona</a>
-                            </li>
-                            <li>
-                                <a class="text-white" asp-area="" asp-controller="FAQ" asp-action="Faq">FAQ</a>
-                            </li>
-                            <li>
-                                <a class="text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+	@* <div class="container"> *@
+	<main role="main" class="flex-grow-1 pb-3">
+		@RenderBody()
+	</main>
+	@* </div> *@
+	<footer class="bg-dark text-white py-4 mt--7">
+		<div class="container">
+			<div class="row gy-4">
+				<div class="col-12 col-md-4">
+					<img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid mb-2" width="150px">
+					<p class="fs-4 mb-0">Università UNIGen</p>
+					<p class="fs-6">Milano, MI 20100, IT</p>
+				</div>
+				<div class="col-12 col-md-4 d-flex align-items-end">
+					<p class="fs-6 mb-0">&copy; 2024 Generation: You Employed, Inc.</p>
+				</div>
+				<div class="col-12 col-md-4">
+					<p class="fs-5 mb-1">Chi Siamo</p>
+					<ul class="list-unstyled">
+						<li><a class="text-white" asp-controller="Home" asp-action="Contatti">Contatti</a></li>
+						<li><a class="text-white" asp-controller="Home" asp-action="Come_Funziona">Come Funziona</a></li>
+						<li><a class="text-white" asp-controller="FAQ" asp-action="Faq">FAQ</a></li>
+						<li><a class="text-white" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
